Ajout du titre et barre de recherche

--- a/HTML/Index.html
+++ b/HTML/Index.html
@@ -29,7 +29,24 @@
       </nav>
       <a href="#" class="subscribe-btn">S'inscrire</a>
     </header>
-    <main></main>
+
+    <main>
+      
+      <!--Recherche et filtres-->
+      <section id="hebergements">
+        <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
+        <p>En plein centre ville ou en pleine nature</p>
+
+        <!--Barre de recherche-->
+        <div class="searchbar">
+          <div class="searchbar-logo">
+            <i class="fas fa-map-marker-alt"></i>
+          </div>
+          <input type="text" placeholder="Marseille, France">
+          <button class="searchbar-btn">Rechercher</button>
+        </div>
+      </section>
+    </main>
     <footer></footer>
   </body>
 </html>
