Ajout résultat recherche

--- a/HTML/Index.html
+++ b/HTML/Index.html
@@ -55,10 +55,14 @@
         <!--Filtres-->
         <div class="filter">
           <p class="filter__name">Filtres</p>
-            <button class="filter__btn btn"> <i class="filter__logo fas fa-money-bill-wave"></i>Économique</button>
+            <button class="filter__btn btn"><i class="filter__logo fas fa-money-bill-wave"></i>Économique</button>
             <button class="filter__btn btn"><i class="filter__logo  fas fa-child"></i>Familial</button>
             <button class="filter__btn btn"><i class="filter__logo fas fa-heart"></i>Romantique</button>
             <button class="filter__btn btn"><i class="filter__logo fas fa-dog"></i>Animaux autorisés</button>
+        </div>
+        <div class="search-result">
+            <i class=" search-result__logo fas fa-info"></i>
+            <p class="search-result__text">Plus de 500 logements sont disponibles dans cette ville</p>
         </div>
       </section>
     </main>
