Ajout modèle carte hébergement disponibles pour la ville

--- a/HTML/Index.html
+++ b/HTML/Index.html
@@ -65,6 +65,36 @@
             <p class="search-result__text">Plus de 500 logements sont disponibles dans cette ville</p>
         </div>
       </section>
+      
+      <!--Cartes hébergements-->
+        <section class="accommodation">
+          <!--Cartes ville-->
+          <div class="city-accommodation">
+            <h2 class="city-accommodation__title">Hébergements à Marseille</h2>
+            <div class="city-accommodation__layout">
+              <article class="city-card">
+                <img class="city-card__picture" src="../images/hebergements/AubergeDeLaCannebiere.jpg" alt="Auberge de la Cannebière">
+                <h3 class="city-card__title">Auberge de la Cannebière</h3>
+                <p class="city-card__description">Nuit à partir de 25€</p>
+                <div class="city-card__rating">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="card__rating--grey fas fa-star"></i>
+                </div>
+              </article>
+            </div>
+          </div>
+
+          <!--Cartes populaires-->
+          <div class="popular-accommodation">
+            <div class="popular-accommodation__header">
+              <h2 class="popular-accommodation__title">Les plus populaires</h2>
+
+            </div>
+          </div>
+      </section>
     </main>
     <footer></footer>
   </body>
