--- a/HTML/Index.html
+++ b/HTML/Index.html
@@ -26,14 +26,18 @@
       />
       <nav class="header__menu">
         <ul class="header__navigation">
-          <li><a class="header__btn header__btn--active" href="#hebergements">Hébergements</a></li>
+          <li>
+            <a class="header__btn header__btn--active" href="#hebergements"
+              >Hébergements</a
+            >
+          </li>
           <li><a class="header__btn" href="#activites">Activités</a></li>
         </ul>
       </nav>
       <a href="#" class="header__btn header__btn--signUp">S'inscrire</a>
     </header>
 
-    <main>
+    <main class="container">
       <!--Recherche et filtres-->
       <section id="hebergements" class="search">
         <h1 class="search__title">
@@ -46,34 +50,53 @@
         <!--Barre de recherche-->
         <div class="searchbar">
           <div class="searchbar__logo">
-            <i class="fas fa-map-marker-alt "></i>
+            <i class="fas fa-map-marker-alt"></i>
           </div>
-          <input class="searchbar__box" type="text" placeholder="Marseille, France" />
+          <input
+            class="searchbar__box"
+            type="text"
+            placeholder="Marseille, France"
+          />
           <button class="searchbar__btn btn">Rechercher</button>
         </div>
 
         <!--Filtres-->
         <div class="filter">
           <p class="filter__name">Filtres</p>
-            <button class="filter__btn btn"><i class="filter__logo fas fa-money-bill-wave"></i>Économique</button>
-            <button class="filter__btn btn"><i class="filter__logo  fas fa-child"></i>Familial</button>
-            <button class="filter__btn btn"><i class="filter__logo fas fa-heart"></i>Romantique</button>
-            <button class="filter__btn btn"><i class="filter__logo fas fa-dog"></i>Animaux autorisés</button>
+          <button class="filter__btn btn">
+            <i class="filter__logo fas fa-money-bill-wave"></i>Économique
+          </button>
+          <button class="filter__btn btn">
+            <i class="filter__logo fas fa-child"></i>Familial
+          </button>
+          <button class="filter__btn btn">
+            <i class="filter__logo fas fa-heart"></i>Romantique
+          </button>
+          <button class="filter__btn btn">
+            <i class="filter__logo fas fa-dog"></i>Animaux autorisés
+          </button>
         </div>
         <div class="search-result">
-            <i class=" search-result__logo fas fa-info"></i>
-            <p class="search-result__text">Plus de 500 logements sont disponibles dans cette ville</p>
+          <i class="search-result__logo fas fa-info"></i>
+          <p class="search-result__text">
+            Plus de 500 logements sont disponibles dans cette ville
+          </p>
         </div>
       </section>
-      
+
       <!--Cartes hébergements-->
-        <section class="accommodation">
-          <!--Cartes ville-->
-          <div class="city-accommodation">
-            <h2 class="city-accommodation__title">Hébergements à Marseille</h2>
-            <div class="city-accommodation__layout">
-              <article class="city-card">
-                <img class="city-card__picture" src="../images/hebergements/AubergeDeLaCannebiere.jpg" alt="Auberge de la Cannebière">
+      <section class="accommodation">
+        <!--Cartes ville-->
+        <div class="city-accommodation">
+          <h2 class="city-accommodation__title">Hébergements à Marseille</h2>
+          <div class="city-accommodation__layout">
+            <a href=""
+              ><article class="city-card">
+                <img
+                  class="city-card__picture"
+                  src="../images/hebergements/AubergeDeLaCannebiere.jpg"
+                  alt="Auberge de la Cannebière"
+                />
                 <h3 class="city-card__title">Auberge de la Cannebière</h3>
                 <p class="city-card__description">Nuit à partir de 25€</p>
                 <div class="city-card__rating">
@@ -82,18 +105,99 @@
                   <i class="fas fa-star"></i>
                   <i class="fas fa-star"></i>
                   <i class="card__rating--grey fas fa-star"></i>
-                </div>
-              </article>
-            </div>
+                </div></article
+            ></a>
+            <a href="#"
+              ><article class="city-card">
+                <img
+                  class="city-card__picture"
+                  src="../images/hebergements/HotelDuPort.jpg"
+                  alt="Hôtel du port"
+                />
+                <h3 class="city-card__title">Hôtel du port</h3>
+                <p class="city-card__description">Nuit à partir de 52€</p>
+                <div class="city-card__rating">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                </div></article
+            ></a>
+            <a href="#"><article class="city-card">
+              <img
+                class="city-card__picture"
+                src="../images/hebergements/HotelLesMouettes.jpg"
+                alt="Hôtel les mouettes"
+              />
+              <h3 class="city-card__title">Hôtel les mouettes</h3>
+              <p class="city-card__description">Nuit à partir de 76€</p>
+              <div class="city-card__rating">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="card__rating--grey fas fa-star"></i>
+              </div>
+            </article></a>
+            <a href="#"><article class="city-card">
+              <img
+                class="city-card__picture"
+                src="../images/hebergements/hotelDeLaMer.jpg"
+                alt="Hôtel de la mer"
+              />
+              <h3 class="city-card__title">Hôtel de la mer</h3>
+              <p class="city-card__description">Nuit à partir de 46€</p>
+              <div class="city-card__rating">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="card__rating--grey fas fa-star"></i>
+                <i class="card__rating--grey fas fa-star"></i>
+              </div>
+            </article></a>
+            <a href="#"><article class="city-card">
+              <img
+                class="city-card__picture"
+                src="../images/hebergements/AubergeLePanier.jpg"
+                alt="Auberge Le Panier"
+              />
+              <h3 class="city-card__title">Auberge Le Panier</h3>
+              <p class="city-card__description">Nuit à partir de 23€</p>
+              <div class="city-card__rating">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="card__rating--grey fas fa-star"></i>
+              </div>
+            </article></a>
+            <a href="#">   <article class="city-card">
+              <img
+                class="city-card__picture"
+                src="../images/hebergements/hotelChezAmina.jpg"
+                alt="Hôtel chez Amina"
+              />
+              <h3 class="city-card__title">Hôtel chez Amina</h3>
+              <p class="city-card__description">Nuit à partir de 96€</p>
+              <div class="city-card__rating">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="card__rating--grey fas fa-star"></i>
+              </div>
+            </article></a>
           </div>
+          <button class="city-accommodation__btn btn">Afficher plus</button>
+        </div>
 
-          <!--Cartes populaires-->
-          <div class="popular-accommodation">
-            <div class="popular-accommodation__header">
-              <h2 class="popular-accommodation__title">Les plus populaires</h2>
-
-            </div>
+        <!--Cartes populaires-->
+        <div class="popular-accommodation">
+          <div class="popular-accommodation__header">
+            <h2 class="popular-accommodation__title">Les plus populaires</h2>
           </div>
+        </div>
       </section>
     </main>
     <footer></footer>
