--- a/HTML/Index.html
+++ b/HTML/Index.html
@@ -196,6 +196,54 @@
         <div class="popular-accommodation">
           <div class="popular-accommodation__header">
             <h2 class="popular-accommodation__title">Les plus populaires</h2>
+            <i class="fas fa-chart-line"></i>
+          </div>
+          <div class="popular-accommodation__layout">
+            <a href="#"> <article class="popular-card">
+              <img src="../images/hebergements/HotelLeSoleil.jpg" alt="Hôtel Le soleil du matin" class="popular-card__picture">
+              <div class="popular-card__content">
+                <h3 class="popular-card__title">Hôtel Le soleil du matin</h3>
+                <p class="popular-card__description">Nuit à partir de 128€</p>
+                <div class="popular-card__rating">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                </div>
+              </div>
+            
+            </article></a>
+            <a href="#"> <article class="popular-card">
+              <img src="../images/hebergements/auCoeurDeLeau.jpg" alt="Au cœur de l'eau Chambres d'hôtes" class="popular-card__picture">
+              <div class="popular-card__content">
+              <h3 class="popular-card__title">Au cœur de l'eau Chambres d'hôtes</h3>
+              <p class="popular-card__description">Nuit à partir de 71€</p>
+              <div class="popular-card__rating">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="card__rating--grey fas fa-star"></i>
+                </div>
+              </div>
+              
+            </article></a>
+          </article></a>
+          <a href="#"> <article class="popular-card">
+            <img src="../images/hebergements/hotelToutBleu.jpg" alt="Hôtel Tout bleu et Blanc" class="popular-card__picture">
+            <div class="popular-card__content">
+              <h3 class="popular-card__title">Hôtel Tout bleu et Blanc</h3>
+              <p class="popular-card__description">Nuit à partir de 68€</p>
+              <div class="popular-card__rating">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="card__rating--grey fas fa-star"></i>
+              </div>
+            </div>
+          </article></a>
           </div>
         </div>
       </section>
