Ajout cartes activités

--- a/HTML/Index.html
+++ b/HTML/Index.html
@@ -172,7 +172,7 @@
                 <i class="card__rating--grey fas fa-star"></i>
               </div>
             </article></a>
-            <a href="#">   <article class="city-card">
+            <a href="#"><article class="city-card">
               <img
                 class="city-card__picture"
                 src="../images/hebergements/hotelChezAmina.jpg"
@@ -212,7 +212,6 @@
                   <i class="fas fa-star"></i>
                 </div>
               </div>
-            
             </article></a>
             <a href="#"> <article class="popular-card">
               <img src="../images/hebergements/auCoeurDeLeau.jpg" alt="Au cœur de l'eau Chambres d'hôtes" class="popular-card__picture">
@@ -227,7 +226,6 @@
                 <i class="card__rating--grey fas fa-star"></i>
                 </div>
               </div>
-              
             </article></a>
           </article></a>
           <a href="#"> <article class="popular-card">
@@ -244,6 +242,41 @@
               </div>
             </div>
           </article></a>
+          </div>
+        </div>
+      </section>
+
+      <!--Cartes activités-->
+      <section class="activity">
+        <h2 class="activiy__title">Activités à Marseille</h2>
+        <div class="activity__layout">
+          <a href="#"><article class="activity-card activity-card--xlarge">
+            <img class="activity-card__picture activity-card__picture--xlarge" src="../images/activites/VieuxPort.jpg" alt="Vieux Port">
+            <h3 class="activity-card__title">Vieux Port</h3>
+          </article></a>
+          <div class="activity__block">
+            <a href="#"> <article class="activity-card activity-card--large">
+              <img class="activity-card__picture activity-card__picture--large" src="../images/activites/FortDePomegues.jpg" alt="Fort de Pomègues">
+              <h3 class="activity-card__title">Fort de Pomègues</h3>
+            </article></a>
+            <a href="#"><article class="activity-card activity-card--xsmall">
+              <img class="activity-card__picture activity-card__picture--xsmall" src="../images/activites/IlesDuFrioul.jpg" alt="Îles du Frioul">
+              <h3 class="activity-card__title">Îles du Frioul</h3>
+            </article></a>
+          </div>
+          <a href="#"><article class="activity-card activity-card--xlarge">
+            <img class="activity-card__picture activity-card__picture--xlarge" src="../images/activites/Calanques.jpg" alt="Parc National des Calanques">
+            <h3 class="activity-card__title">Parc National des Calanques</h3>
+          </article></a>
+          <div class="activity__block">
+            <a href="#"><article class="activity-card activity-card--small">
+              <img class="activity-card__picture activity-card__picture--small" src="../images/activites/NotreDame.jpg" alt="Notre-Dame-de-la-Garde">
+              <h3 class="activity-card__title">Notre-Dame-de-la-Garde</h3>
+            </article></a>
+            <a href="#">  <article class="activity-card activity-card--medium">
+              <img class="activity-card__picture activity-card__picture--medium" src="../images/activites/ParcLongchamp.jpg" alt="Parc Longchamp">
+              <h3 class="activity-card__title">Parc Longchamp</h3>
+            </article></a>
           </div>
         </div>
       </section>
