Ajout du footer

--- a/HTML/Index.html
+++ b/HTML/Index.html
@@ -281,6 +281,31 @@
         </div>
       </section>
     </main>
-    <footer></footer>
+
+    <!--Footer-->
+    <footer class="footer"> 
+      <div class="footer-section">
+        <h4 class="footer-section__title">À Propos</h4>
+        <ul class="footer-section__content">
+          <li><a href="#">Fonctionnement du site</a></li>
+          <li><a href="#">Conditions générales de vente</a></li>
+          <li><a href="#">Données et confifentialité</a></li>
+        </ul>
+      </div>
+      <div class="footer-section">
+        <h4 class="footer-section__title">Nos hébergements</h4>
+        <ul class="footer-section__content">
+          <li><a href="#">Charte qualité</a></li>
+          <li><a href="#">Soumettre votre hôtel</a></li>
+        </ul>
+      </div>
+      <div class="footer-section">
+        <h4 class="footer-section__title">Assistance</h4>
+        <ul class="footer-section__content">
+          <li><a href="#">Centre d'aide</a></li>
+          <li><a href="#">Nous contacter</a></li>
+        </ul>
+      </div>
+    </footer>
   </body>
 </html>
