Filtres responsive mobile

--- a/HTML/Index.html
+++ b/HTML/Index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
   <title>Reservia</title>
   <link rel="preconnect" href="https://fonts.gstatic.com" />
   <link
@@ -52,18 +52,20 @@
       <!--Filtres-->
       <div class="filter">
         <p class="filter__name">Filtres</p>
-        <button class="filter__btn btn">
-          <i class="filter__logo fas fa-money-bill-wave"></i>Économique
-        </button>
-        <button class="filter__btn btn">
-          <i class="filter__logo fas fa-child"></i>Familial
-        </button>
-        <button class="filter__btn btn">
-          <i class="filter__logo fas fa-heart"></i>Romantique
-        </button>
-        <button class="filter__btn btn">
-          <i class="filter__logo fas fa-dog"></i>Animaux autorisés
-        </button>
+        <div class="filter__block">
+          <button class="filter__btn btn">
+            <i class="filter__logo fas fa-money-bill-wave"></i>Économique
+          </button>
+          <button class="filter__btn btn">
+            <i class="filter__logo fas fa-child"></i>Familial
+          </button>
+          <button class="filter__btn btn">
+            <i class="filter__logo fas fa-heart"></i>Romantique
+          </button>
+          <button class="filter__btn btn">
+            <i class="filter__logo fas fa-dog"></i>Animaux autorisés
+          </button>
+        </div>
       </div>
       <div class="search-result">
         <i class="search-result__logo fas fa-info"></i>
