--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
   <title>Reservia</title>
+  <link rel="shortcut icon" href="images/logo/favicon.png">
   <link rel="preconnect" href="https://fonts.gstatic.com" />
   <link
     href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,600;0,700&display=swap"
